[metadata]
name = rex 
summary = A python module for simplifying regular expression manipulations.
description-file =
    README.md
author = Behzad Dastur 
author-email = bdastur@gmail.com
home-page = https://github.com/bdastur/rex"
classifier =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6 
    Programming Language :: Python :: 2.7 
    Intended Audience :: Developers
    License :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS

[files]
packages =
    rex 

[wheel]
universal = 1

